Begin base styling

--- a/app/styles/_base.scss
+++ b/app/styles/_base.scss
@@ -1,6 +1,12 @@
+*, *:before, *:after {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
 body {
-  font-family: Helvetica, sans-serif;
-  color: $font-color--dark;
-  background-color: $background--light;
-  padding: $half-space;
+  margin: 0;
+  padding: 0;
+
+  background-color: $body-background-grey;
 }
