--- a/app/styles/_vars.scss
+++ b/app/styles/_vars.scss
@@ -1,19 +1,9 @@
 // colors
-$font-color--dark: #333;
-$font-color--light: #fff;
-$background--light: #eee;
-$background--dark: #222;
-$blue: #1f8de2;
-$green: #1fe27b;
-$red: #e21f3f;
+$white: #ffffff;
+$black: #000000;
+
+$body-background-grey: #e6e6e6;
 
 // spacing
 $full-space: 40px;
 $half-space: 20px;
-
-// font sizing
-$font-size--xs: 10px;
-$font-size--sm: 12px;
-$font-size--md: 16px;
-$font-size--lg: 24px;
-$font-size--xl: 32px;
