Begin to implement prediction card styling and logic

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,7 +1,10 @@
 @import 'vars';
+@import 'mixins';
 @import 'typography';
 @import 'layout';
 @import 'base';
 
 @import 'elements/header';
 @import 'elements/footer';
+@import 'elements/user-avatar';
+@import 'elements/prediction-card';
