--- a/app/styles/_vars.scss
+++ b/app/styles/_vars.scss
@@ -2,7 +2,17 @@
 $white: #ffffff;
 $black: #000000;
 
+$finance: #039b67; // green
+$politics: #e54236; // red
+$sports: #2e8dd6; // blue
+$entertainment: #f4bb15; // yellow
+$tech: #d79003; // orange
+
 $body-background-grey: #e6e6e6;
+
+$grey-text: #616161;
+$dark-grey-text: #595959;
+$link-color: #2a81c4;
 
 // spacing
 $full-space: 40px;
