--- a/app/styles/_typography.scss
+++ b/app/styles/_typography.scss
@@ -1,6 +1,18 @@
+@import '//code.cdn.mozilla.net/fonts/fira.css';
+
 body {
-  font-family: 'Helvetica Neue', Helvetica, sans-serif;
+  font-family: Fira Sans', Helvetica Neue', Helvetica, sans-serif;
   font-size: 16px;
+}
+
+a {
+  color: $link-color;
+  text-decoration: none;
+  font-weight: 500;
+
+  &:hover, &:active {
+    text-decoration: underline;
+  }
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -32,3 +44,6 @@ h5,.epsilon {
 h6,.zeta {
   font-size: 16px;
 }
+
+.grey { color: $grey-text; }
+.dark-grey { color: $dark-grey-text; }
