Add pages and links for predictions and profiles

--- a/app/styles/elements/_prediction-card.scss
+++ b/app/styles/elements/_prediction-card.scss
@@ -82,6 +82,10 @@ div.prediction-card {
       bottom: 0;
       left: 0;
     }
+
+    &:hover .title {
+      text-decoration: underline;
+    }
   }
 
   .info-container {
