Begin header styling

--- a/app/styles/_vars.scss
+++ b/app/styles/_vars.scss
@@ -9,6 +9,7 @@ $entertainment: #f4bb15; // yellow
 $tech: #d79003; // orange
 
 $body-background-grey: #e6e6e6;
+$dark-background-grey: #4a4a4a;
 
 $grey-text: #616161;
 $dark-grey-text: #595959;
