--- a/app/styles/elements/_header.scss
+++ b/app/styles/elements/_header.scss
@@ -1,8 +1,12 @@
 header {
-  height: 50px;
-  margin-bottom: $half-space;
 
-  background: #eeeeee;
+  position: relative;
+  display: table;
+  width: 100%;
+  height: 100px;
+
+  background: $dark-background-grey;
+
   .shadow {
     position: absolute;
     right: 0;
