--- a/app/styles/elements/_featured-users.scss
+++ b/app/styles/elements/_featured-users.scss
@@ -3,8 +3,7 @@ section.featured-users {
   @extend .islet;
   margin-bottom: $half-space;
 
-  background: $white;
-  @include box-shadow(0px 1px 1.5px rgba(0, 0, 0, 0.3));
+  @extend %card;
 
   .title {
     text-transform: uppercase;
