--- a/app/styles/elements/_header.scss
+++ b/app/styles/elements/_header.scss
@@ -1,28 +1,40 @@
 header {
 
   position: relative;
-  display: table;
   width: 100%;
-
-  background: $dark-background-grey;
 
   div.top-container {
     display: table;
+    table-layout: fixed;
     width: 100%;
     height: 100px;
+    margin: 0 auto;
+
+    background: $dark-background-grey;
 
     & > * {
       display: table-cell;
       vertical-align: middle;
     }
 
+    a {
+      font-size: 18px;
+      color: $white;
+    }
+
+    .logo-container,
+    .login-container {
+      width: 10%;
+    }
+
     .logo-container {
-      width: 60px;
+      padding: 0 $half-space;
 
        .logo {
         position: relative;
         width: 60px;
         height: 60px;
+
         background: $white;
         @include border-radius(100%);
 
@@ -38,13 +50,13 @@ header {
 
     ul {
       margin: 0;
-      padding: $half-space $full-space 0;
+      padding: $half-space 0 0 0;
       list-style: none;
 
       li {
+        z-index: 2; /* place above filter */
         position: relative;
         display: inline-block;
-        font-size: 18px;
 
         &:not(:last-child) {
           margin-right: $half-space;
@@ -55,13 +67,13 @@ header {
           height: 80px;
           line-height: 50px;
           padding: $half-space/2;
-
-          color: $white;
         }
       }
     }
 
     .main-nav {
+      width: $grid-max-width;
+
       li {
         a {
           .color-strip {
@@ -77,27 +89,27 @@ header {
           }
 
           &.finance {
-            &:hover { background-color: $finance; }
+            &.active, &:hover { background-color: $finance; }
 
             .color-strip { background-color: $finance; }
           }
           &.politics {
-            &:hover { background-color: $politics; }
+            &.active, &:hover { background-color: $politics; }
 
             .color-strip { background-color: $politics; }
           }
           &.sports {
-            &:hover { background-color: $sports; }
+            &.active, &:hover { background-color: $sports; }
 
             .color-strip { background-color: $sports; }
           }
           &.entertainment {
-            &:hover { background-color: $entertainment; }
+            &.active, &:hover { background-color: $entertainment; }
 
             .color-strip { background-color: $entertainment; }
           }
           &.tech {
-            &:hover { background-color: $tech; }
+            &.active, &:hover { background-color: $tech; }
 
             .color-strip { background-color: $tech; }
           }
@@ -105,35 +117,23 @@ header {
             text-decoration: underline;
           }
         }
+
+        ul {
+          display: none;
+        }
+
+        &:hover {
+          ul { display: block; }
+        }
       }
     }
 
-    .user-options {
-      padding-right: 0;
+    .login-container {
+      padding-right: $half-space;
 
       text-align: right;
     }
   }
-
-  div.hero {
-
-  }
-
-  .filter {
-    z-index: 1;
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    opacity: 0.3;
-  }
-
-  &.finance > .filter { background-color: $finance; }
-  &.politics > .filter { background-color: $politics; }
-  &.sports > .filter { background-color: $sports; }
-  &.entertainment > .filter { background-color: $entertainment; }
-  &.tech > .filter { background-color: $tech; }
 
   .shadow {
     position: absolute;
@@ -142,7 +142,7 @@ header {
     left: 0;
     height: 5px;
 
-    opacity: 0.1;
+    opacity: 0.2;
 
     background: -moz-linear-gradient(bottom,  rgba(0,0,0,0) 0%, rgba(0,0,0,0.65) 100%);
     background: -webkit-gradient(linear, left bottom, left top, color-stop(0%,rgba(0,0,0,0)), color-stop(100%,rgba(0,0,0,0.65)));
