--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -6,6 +6,7 @@
 @import 'base';
 
 @import 'elements/header';
+@import 'elements/hero';
 @import 'elements/footer';
 @import 'elements/user-avatar';
 @import 'elements/prediction-card';
