--- a/app/styles/_typography.scss
+++ b/app/styles/_typography.scss
@@ -1,7 +1,5 @@
-@import '//code.cdn.mozilla.net/fonts/fira.css';
-
 body {
-  font-family: Fira Sans', Helvetica Neue', Helvetica, sans-serif;
+  font-family: 'Fira Sans', 'Helvetica Neue', Helvetica, sans-serif;
   font-size: 16px;
 }
 
