--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -12,3 +12,4 @@
 @import 'elements/prediction-card';
 @import 'elements/featured-users';
 @import 'elements/recent-blog-posts';
+@import 'elements/now-playing';
