Mostly finish Now Playing section/component

--- a/app/styles/_layout.scss
+++ b/app/styles/_layout.scss
@@ -19,6 +19,7 @@
 .nudge-half--top { margin-top: $half-space; }
 .nudge--bottom { margin-bottom: $full-space; }
 .nudge-half--bottom { margin-bottom: $half-space; }
+.nudge-quarter--bottom { margin-bottom: $half-space/2; }
 .nudge--left { margin-left: $full-space; }
 .nudge-half--left { margin-left: $half-space; }
 .nudge--right { margin-right: $full-space; }
