--- a/app/styles/_vars.scss
+++ b/app/styles/_vars.scss
@@ -14,6 +14,7 @@ $tech: #d79003; // orange
 $body-background-grey: #e6e6e6;
 $dark-background-grey: #4a4a4a;
 
+$light-grey-text: #a39f9e;
 $grey-text: #616161;
 $dark-grey-text: #595959;
 $link-color: #2a81c4;
