--- a/app/styles/_typography.scss
+++ b/app/styles/_typography.scss
@@ -43,5 +43,8 @@ h6,.zeta {
   font-size: 16px;
 }
 
+.caps { text-transform: uppercase; }
+
+.light-grey { color: $light-grey-text; }
 .grey { color: $grey-text; }
 .dark-grey { color: $dark-grey-text; }
