--- a/app/styles/elements/_now-playing.scss
+++ b/app/styles/elements/_now-playing.scss
@@ -21,11 +21,68 @@ section.now-playing {
         background: $black;
         color: $white;
       }
+
+      .shadow {
+        position: absolute;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        height: 5px;
+
+        background: -moz-linear-gradient(top,  rgba(0,0,0,0) 0%, rgba(0,0,0,0.65) 100%);
+        background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0)), color-stop(100%,rgba(0,0,0,0.65)));
+        background: -webkit-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%);
+        background: -o-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%);
+        background: -ms-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%);
+        background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%);
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#a6000000',GradientType=0 );
+      }
     }
 
     .info-container {
       height: ((380px*2 + $half-space) - 125px);
-      padding: $full-space;
+
+      .table.scores-table {
+        .tr.time-period-row {
+          color: $light-grey-text;
+          font-weight: 500;
+        }
+
+        .tr:not(.time-period-row):not(:last-child) .td {
+          padding-bottom: $half-space;
+        }
+
+        .td.team-image-container {
+          width: 100px;
+
+          .team-image {
+            height: 60px;
+            width: 60px;
+
+            @include border-radius(100%);
+            @include background-cover(center);
+            background-color: $light-grey-text;
+          }
+        }
+
+        .team-name {
+          display: inline-block;
+        }
+      }
+
+      .highlights, .related-predictions {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+      }
+
+      .highlights li {
+        display: inline-block;
+      }
+
+      .related-predictions li:not(:last-child) {
+        margin-bottom: $half-space/2;
+      }
     }
   }
 
@@ -54,6 +111,7 @@ section.now-playing {
       bottom: 0;
       left: 0;
 
+      @include border-radius(5px);
       opacity: 0.3;
 
       &.red {
