--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -14,3 +14,4 @@
 @import 'elements/featured-users';
 @import 'elements/recent-blog-posts';
 @import 'elements/now-playing';
+@import 'elements/game-highlight';
