Replace sketchy grid system with Elf

--- a/app/styles/elements/_header-hero.scss
+++ b/app/styles/elements/_header-hero.scss
@@ -12,7 +12,9 @@ div.header-hero-container {
   .hero {
     @extend %hero;
 
-    .prediction { @extend %card; }
+    .prediction {
+      @extend %card;
+    }
   }
 
   .background-image {
