--- a/app/styles/elements/_hero.scss
+++ b/app/styles/elements/_hero.scss
@@ -28,12 +28,15 @@
     text-transform: uppercase;
   }
 
+  .title, .cta, .cta > a {
+    color: $white;
+  }
+
   .cta {
     font-weight: normal;
 
     a {
       margin-left: $half-space;
-      color: $white;
       font-weight: bold;
     }
   }
