--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,18 +1,20 @@
 @import 'vars';
-@import 'mixins';
+@import 'utils';
 @import 'typography';
 @import 'layout';
-@import 'vendor/elf/elf';
 @import 'vendor/font-awesome/font-awesome';
 @import 'base';
 
-@import 'elements/card';
-@import 'elements/header-hero';
+@import 'elements/button';
+@import 'elements/header';
+@import 'elements/hero';
 @import 'elements/footer';
-@import 'elements/user-avatar';
+@import 'elements/card-grid';
+@import 'elements/user';
 @import 'elements/prediction-card';
-@import 'elements/featured-predictions';
-@import 'elements/featured-users';
-@import 'elements/recent-blog-posts';
-@import 'elements/now-playing';
-@import 'elements/game-highlight';
+@import 'elements/faceoff-card';
+@import 'elements/featured-prediction-card';
+@import 'elements/category-link-card';
+@import 'elements/list-card';
+@import 'elements/featured-blog-posts';
+@import 'elements/prediction-set-card';
