--- a/app/styles/_base.scss
+++ b/app/styles/_base.scss
@@ -1,26 +1,136 @@
+@import url(http://yui.yahooapis.com/combo?pure/0.5.0/base-min.css&pure/0.5.0/grids-min.css&pure/0.5.0/forms-min.css);
+
+bod,html {
+  background-color: $very-light-grey;
+  position: relative;
+}
+
 body {
   margin: 0;
   padding: 0;
-
-  background-color: $body-background-grey;
 }
 
 *, *:before, *:after {
   @include border-box;
 }
 
-.wrapper, .row {
+.content {
+  z-index: 80;
+  position: absolute;
   width: 100%;
-  max-width: $grid-max-width;
-  margin: 0 auto;
-  overflow: hidden;
+  overflow-x: hidden;
+
+  & >.card-grid {
+    width: 95%;
+  }
+
+  &.no-hero {
+    margin-top: ($header-height + 2rem);
+  }
 }
 
-.content-container {
-  @include column(2/3, $half-space);
-
+.scrim {
+  z-index: 60;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
 }
 
-.sidebar-container {
-  @include column(1/3, $half-space);
+.blue { background-color: $blue; }
+.red { background-color: $red; }
+.yellow { background-color: $yellow; }
+.yellow-green { background-color: $yellow-green; }
+.green { background-color: $green; }
+.orange { background-color: $orange; }
+
+p, .p, label, table {
+  margin: 0 0 1rem;
+  font-family: $sans;
+  font-weight: $regular;
+  font-size: 1rem;
+  line-height: 1.75rem;
+}
+
+pre {
+  margin: 1rem 0;
+  padding: 1rem;
+  background-color: $white;
+  font-family: monospace;
+}
+
+$table-padding: 0.5rem;
+table {
+  // border: 1px solid $dark-grey;
+  margin: 1rem auto 2rem;
+  @include box-shadow;
+
+  thead {
+    background-color: $blue;
+    color: $white;
+    // border-bottom: 1px solid $dark-grey;
+  }
+  tfoot {
+    // border-top: 1px solid $dark-grey;
+  }
+}
+
+th, td {
+  padding: 0 $table-padding;
+  // &:first-child {
+  //     padding-left: 0;
+  // }
+  // &:last-child {
+  //     padding-right: 0;
+  // }
+}
+
+tr {
+  &:nth-child(even){
+    background-color: $ultra-light-grey;
+  }
+}
+
+th {
+  font-weight: $bold;
+}
+
+ul { list-style: disc; }
+ol { list-style: decimal; }
+ul, ol {
+  padding: 0;
+  margin-left: 2rem;
+  li {
+    @extend .p;
+    margin: 0;
+  }
+}
+
+input, textarea {
+  @extend .h6;
+  padding: 0.5rem 1rem;
+  margin: 0;
+  border: 1px solid $very-light-grey;
+  @include border-box;
+  outline: 0;
+  width: 10rem;
+  @include transition(0.2s);
+
+  &::-webkit-input-placeholder,
+  &:-moz-placeholder,
+  &::-moz-placeholder,
+  &:-ms-input-placeholder {
+    @extend .h6;
+  }
+
+  &.stretch {
+    width: 2.5rem;
+    padding-left: 1.75rem;
+
+    &:focus {
+      width: 10rem;
+      padding-left: 2.25rem;
+    }
+  }
 }
