--- a/app/styles/_typography.scss
+++ b/app/styles/_typography.scss
@@ -1,50 +1,100 @@
-body {
-  font-family: 'Fira Sans', 'Helvetica Neue', Helvetica, sans-serif;
-  font-size: 16px;
+@import url(http://fonts.googleapis.com/css?family=Roboto+Slab|Open+Sans:400,700,300);
+
+$extra-bold: 800;
+$bold: 700;
+$regular: 400;
+$thin: 300;
+$sans: 'Open Sans', Helvetica, Ariel sans-serif;
+$serif:'Roboto Slab', Georgia, serif;
+
+html, button, input, select, textarea,
+.pure-g [class *= "pure-u"] {
+    /* Set your content font stack here: */
+    font-family: $sans;
 }
 
-a {
-  color: $link-color;
-  text-decoration: none;
-  font-weight: 500;
+body, html {
+  font-size: 10px;
+  color: $dark-grey;
+}
 
-  &:hover, &:active {
-    text-decoration: underline;
+em { font-style: italic; }
+
+strong, .bold { font-weight: $bold; }
+
+a, a:hover {
+  color: inherit;
+  text-decoration: none;
+}
+
+h1, .h1 {
+  font-family: $serif;
+  font-size: 2.75rem;
+  line-height: 3.5rem;
+}
+
+h2, .h2 {
+  font-family: $serif;
+  font-weight: $regular;
+  font-size: 2.25rem;
+  line-height: 3rem;
+}
+
+h3, .h3 {
+  font-family: $serif;
+  font-weight: $regular;
+  font-size: 1.75rem;
+  line-height: 2.25rem;
+}
+
+h4, .h4 {
+  font-family: $serif;
+  font-weight: $regular;
+  font-size: 1.25rem;
+  line-height: 2rem;
+}
+
+h5, .h5 {
+  font-family: $sans;
+  font-weight: $bold;
+  font-size: 1rem;
+  line-height: 1rem;
+  margin-bottom: 0.625rem;
+}
+
+h6, .h6 {
+  font-family: $sans;
+  font-weight: $regular;
+  font-size: 0.8rem;
+  line-height: 1rem;
+}
+
+@media screen and (min-width: $xxl-desktop-min) {
+  html, body {
+    font-size: 18px;
   }
 }
 
-h1, h2, h3, h4, h5, h6 {
-  margin: 0 0 $half-space;
-
-  font-weight: 600;
+@media screen and (max-width: $xl-desktop-max) {
+  html, body {
+    font-size: 18px;
+  }
 }
 
-h1,.alpha {
-  font-size: 36px;
+@media screen and (max-width: $desktop-max) {
+  html, body {
+    font-size: 16px;
+  }
 }
 
-h2,.beta {
-  font-size: 30px;
+@media screen and (max-width: $tablet-landscape-max) {
+  html, body {
+    font-size: 13px;
+  }
 }
 
-h3,.gamma {
-  font-size: 24px;
+@media screen and (max-width: $tablet-portrait-max) {
+  html, body {
+    font-size: 11px;
+  }
 }
-
-h4,.delta {
-  font-size: 20px;
-}
-
-h5,.epsilon {
-  font-size: 18px;
-}
-
-h6,.zeta {
-  font-size: 16px;
-}
-
-.caps { text-transform: uppercase; }
-
-.light-grey { color: $light-grey-text; }
-.grey { color: $grey-text; }
-.dark-grey { color: $dark-grey-text; }
