--- a/app/styles/elements/_footer.scss
+++ b/app/styles/elements/_footer.scss
@@ -1,28 +1,31 @@
 footer {
 
-  position: relative;
-  @extend .island;
-  height: 50px;
-  margin-top: $full-space;
+  padding: 2rem 0 4rem;
+  margin-top: 2rem;
 
-  background: $white;
+  background-color: $blue;
+  color: $white;
+  @include border-box;
 
-  .shadow {
-    position: absolute;
-    right: 0;
-    top: -5px;
-    left: 0;
-    height: 5px;
+  & > .card-grid {
+    max-width: 95%;
+    width: $content-width;
+    margin: 0 auto;
+  }
 
-    opacity: 0.1;
+  ul {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    ul {
+      margin-left: 1rem;
+    }
+  }
 
-    background: -moz-linear-gradient(top,  rgba(0,0,0,0) 0%, rgba(0,0,0,0.65) 100%);
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0)), color-stop(100%,rgba(0,0,0,0.65)));
-    background: -webkit-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%);
-    background: -o-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%);
-    background: -ms-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%);
-    background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#a6000000',GradientType=0 );
+  .double {
+    border-bottom: 1px solid $white;
+    margin-bottom: 0.5rem;
+    width: 50%;
   }
 
 }
