--- a/app/styles/elements/_hero.scss
+++ b/app/styles/elements/_hero.scss
@@ -1,130 +1,36 @@
-%hero {
+.hero {
 
+  z-index: 100;
   position: relative;
-  display: table;
+  height: 80vh;
   width: 100%;
-  height: 300px;
-  vertical-align: middle;
+  margin: 0 auto;
+  padding-top: $header-height;
+  padding-bottom: 2rem;
 
-  @include background-cover();
-  color: $white;
+  &.fixed {
+    height: $hero-height;
+    width: ($content-width + 2 * $extension);
 
-  &.finance { color: lighten($finance, 15); }
-  &.politics { color: lighten($politics, 15); }
-  &.sports { color: lighten($sports, 15); }
-  &.entertainment { color: lighten($entertainment, 15); }
-  &.tech { color: lighten($tech, 15); }
+    &.done {
+      max-width: 100%;
+    }
 
-  & * {
-    position: relative;
-    z-index: 2;
-  }
-
-  h6 {
-    margin: $full-space 0 $half-space;
-    position: relative;
-    z-index: 2; /* place above filter */
-
-    text-transform: uppercase;
-  }
-
-  .title, .cta, .cta > a {
-    color: $white;
-  }
-
-  .cta {
-    font-weight: normal;
-
-    a {
-      margin-left: $half-space;
-      font-weight: bold;
+    .featured {
+      height: $hero-height;
     }
   }
 
-  ul.subnav {
-    margin: $half-space 0 0;
-    padding: 0;
-    list-style: none;
-
-    li {
-      position: relative;
-      z-index: 2; /* place above filter */
-      display: inline-block;
-
-      a {
-        padding: $half-space/2;
-
-        font-size: 20px;
-        text-transform: uppercase;
-        color: $white;
-
-        &.active, &:hover, &:active {
-          background-color: $white;
-          text-decoration: none;
-        }
-      }
-    }
-
-    &.finance li a.active, &.finance li a:hover, &.finance li a:active { color: $finance; }
-    &.politics li a.active, &.politics li a:hover, &.politics li a:active { color: $politics; }
-    &.sports li a.active, &.sports li a:hover, &.sports li a:active { color: $sports; }
-    &.entertainment li a.active, &.entertainment li a:hover, &.entertainment li a:active { color: $entertainment; }
-    &.tech li a.active, &.tech li a:hover, &.tech li a:active { color: $tech; }
-  }
-
-  div.latest-predictions-container {
-    position: relative;
-    z-index: 2;
-    margin-bottom: $half-space;
-
-    .prediction {
-      @include column(1/4, $half-space);
-      @include cycle(4);
-      position: relative;
-      height: 175px;
-      padding: $half-space;
-
-      cursor: pointer;
-
-      h5.title {
-        z-index: 2; /* place above gradient */
-        position: absolute;
-        bottom: 0;
-        margin-left: 0;
-
-        color: $white;
-      }
-
-      .gradient {
-        z-index: 1;
-        position: absolute;
-        right: 0;
-        bottom: 0;
-        left: 0;
-        height: 75px;
-
-        background: -moz-linear-gradient(top,  rgba(0,0,0,0) 0%, rgba(0,0,0,0.65) 100%);
-        background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0)), color-stop(100%,rgba(0,0,0,0.65)));
-        background: -webkit-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%);
-        background: -o-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%);
-        background: -ms-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%);
-        background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%);
-        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#a6000000',GradientType=0 );
-      }
-
-      a {
-        z-index: 3;
-        position: absolute;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
-      }
-
-      &:hover h5.title {
-        text-decoration: underline;
-      }
-    }
+  & > .background {
+    @include large-box-shadow;
+    top: $header-height;
+    bottom: 2rem;
+    position: absolute;
+    background-repeat: no-repeat;
+    background-position: top center;
+    background-size: 100%;
+    width: 100%;
+    overflow-x: hidden;
   }
 
 }
