use relative protocol when loading external stylesheets

--- a/app/styles/_base.scss
+++ b/app/styles/_base.scss
@@ -1,4 +1,4 @@
-@import url(http://yui.yahooapis.com/combo?pure/0.5.0/base-min.css&pure/0.5.0/grids-min.css&pure/0.5.0/forms-min.css);
+@import url(//yui.yahooapis.com/combo?pure/0.5.0/base-min.css&pure/0.5.0/grids-min.css&pure/0.5.0/forms-min.css);
 
 bod,html {
   background-color: $very-light-grey;
