Fix imports for external CSS files

--- a/app/styles/_typography.scss
+++ b/app/styles/_typography.scss
@@ -1,4 +1,4 @@
-@import '//fonts.googleapis.com/css?family=Roboto+Slab|Open+Sans:400,700,300';
+@import url('//fonts.googleapis.com/css?family=Roboto+Slab|Open+Sans:400,700,300');
 
 $extra-bold: 800;
 $bold: 700;
