remove unused styles, fix URL import

--- a/app/styles/_base.scss
+++ b/app/styles/_base.scss
@@ -1,4 +1,4 @@
-@import '//cdn.jsdelivr.net/g/pure@0.5.0(base-min.css+grids-min.css+forms-min.css';
+@import url('//cdn.jsdelivr.net/g/pure@0.5.0(base-min.css+grids-min.css+forms-min.css');
 
 bod,html {
   background-color: $very-light-grey;
